...
                iconColor={MD2Colors.blue600}
                onPress={() => {
                  setTask(item);
                  setOpen(true);
                }}
                style={styles.iconButton}
                testID="test-edit"
              />
              <IconButton
                icon="delete"
                iconColor={MD2Colors.red600}
                style={styles.iconButton}
                onPress={() => deleteTask(item.id)}
                testID="test-delete"
              />
            </View>
          </View>
        </View>
      </View>
    ),
...
