import SignInScreen from './sign-in/index.screen';
import SignUpScreen from './sign-up/index.screen';
import TodoScreen from './todo/index.screen';
import SettingsScreen from './settings/index.screen';

export {SignInScreen, SignUpScreen, TodoScreen, SettingsScreen};

export const screenNames = {
  signIn: 'Sign In',
  signUp: 'Sign Up',
  todo: 'To Do',
  settings: 'Settings',
};
